2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('opacity' parse): Support for '+'.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('letter-spacing' parse): Support for '+'.
	('border-spacing' serialize_multiple): Revised taking into
	account 'import' and 'inherit'.
	('border-spacing' parse): Support for '+'.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($parse_color): Support for '+'.  HSL to RGB
	convertion was wrong.
	('orphans', 'background-position' parse): Support for '+'.

2008-01-27  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('z-index', 'line-height', 'border-width' parse): Support
	for '+'.
	('margin-top' parse): Fixed to report more accureate error
	position.
	('right'): Negative values and 'auto' were not supported.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('font-weight' parser): Support for '+'.

	* Tokenizer.pm: Normalize number stored in |NUMBER_TOKEN|,
	|PERCENTAGE_TOKEN|, and |DIMENSION_TOKEN|.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('font-size' parser): Support for '+'.  Fixed to
	report more accurate error position.  Enabled the
	support for '-webkit-xxx-large'.
	('font' parse): Support for '+' in <'font-weight'>
	and <'font-size'>.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('background' serialize_multiple, 'background-position'
	serialize_shorthand): Reimplemented taking 'inherit'
	and 'important' into account.
	('background' parse): Support for '+'.  Correct initial value
	for 'background-position-y' was not set in some cases.
	Wrong value was set to 'background-position-x' in some case.
	Did not return by some syntax errors.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (get_char): Use argument to avoid self reference.

	* Tokenizer.pm: Set the tokenizer itself as the first
	argument to the |get_char| function.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ('border' serialize_multiple): Reimplement