@@ -3055,6 +3055,203 @@ p {
 
 #data
 p {
+  overflow: scroll;
+}
+#cssom
+| <p>
+|   overflow: scroll
+|   overflow-x: scroll
+|   overflow-y: scroll
+#csstext
+p {
+  overflow: scroll;
+}
+
+#data
+p {
+  overflow: auto;
+}
+#cssom
+| <p>
+|   overflow: auto
+|   overflow-x: auto
+|   overflow-y: auto
+#csstext
+p {
+  overflow: auto;
+}
+
+#data
+p {
+  overflow: hidden;
+}
+#cssom
+| <p>
+|   overflow: hidden
+|   overflow-x: hidden
+|   overflow-y: hidden
+#csstext
+p {
+  overflow: hidden;
+}
+
+#data
+p {
+  overflow: visible;
+}
+#cssom
+| <p>
+|   overflow: visible
+|   overflow-x: visible
+|   overflow-y: visible
+#csstext
+p {
+  overflow: visible;
+}
+
+#data
+p {
+  overflow: -moz-hidden-unscrollable;
+}
+#cssom
+| <p>
+|   overflow: -moz-hidden-unscrollable
+|   overflow-x: -moz-hidden-unscrollable
+|   overflow-y: -moz-hidden-unscrollable
+#csstext
+p {
+  overflow: -moz-hidden-unscrollable;
+}
+
+#data
+p {
+  overflow: -webkit-marquee;
+}
+#cssom
+| <p>
+|   overflow: -webkit-marquee
+|   overflow-x: -webkit-marquee
+|   overflow-y: -webkit-marquee
+#csstext
+p {
+  overflow: -webkit-marquee;
+}
+
+#data
+p {
+  overflow: inherit;
+}
+#cssom
+| <p>
+|   overflow: inherit
+|   overflow-x: inherit
+|   overflow-y: inherit
+#csstext
+p {
+  overflow: inherit;
+}
+
+#data
+p {
+  overflow-x: scroll;
+  overflow-y: auto;
+}
+#cssom
+| <p>
+|   overflow-x: scroll
+|   overflow-y: auto
+#csstext
+p {
+  overflow-x: scroll;
+  overflow-y: auto;
+}
+
+#data
+p {
+  overflow-x: auto ! important;
+  overflow-y: auto;
+}
+#cssom
+| <p>
+|   overflow-x: auto !important
+|   overflow-y: auto
+#csstext
+p {
+  overflow-x: auto ! important;
+  overflow-y: auto;
+}
+
+#data
+p {
+  overflow-y: auto ! important;
+  overflow-x: auto;
+}
+#cssom
+| <p>
+|   overflow-x: auto
+|   overflow-y: auto !important
+#csstext
+p {
+  overflow-x: auto;
+  overflow-y: auto ! important;
+}
+
+#data
+p {
+  overflow-x: inherit;
+  overflow-y: auto;
+}
+#cssom
+| <p>
+|   overflow-x: inherit
+|   overflow-y: auto
+#csstext
+p {
+  overflow-x: inherit;
+  overflow-y: auto;
+}
+
+#data
+p {
+  overflow-x: auto;
+  overflow-y: inherit;
+}
+#cssom
+| <p>
+|   overflow-x: auto
+|   overflow-y: inherit
+#csstext
+p {
+  overflow-x: auto;
+  overflow-y: inherit;
+}
+
+#data
+p {
+  overflow-x: -moz-hidden-unscrollable;
+}
+#cssom
+| <p>
+|   overflow-x: -moz-hidden-unscrollable
+#csstext
+p {
+  overflow-x: -moz-hidden-unscrollable;
+}
+
+#data
+p {
+  overflow-y: -webkit-marquee;
+}
+#cssom
+| <p>
+|   overflow-y: -webkit-marquee
+#csstext
+p {
+  overflow-y: -webkit-marquee;
+}
+
+#data
+p {
   background-position: inherit;
 }
 #cssom
