@@ -1,5 +1,12 @@
 2008-01-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* CSS-Parser-1.t: 'overflow-x' and 'overflow-y' are added.
+
+	* css-visual.dat: New test data for 'overflow', 'overflow-x',
+	and 'overflow-y' are added.
+
+2008-01-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-visual.dat: New test data for 'opacity' and '-moz-opacity'
 	are added.
 
