@@ -1,5 +1,12 @@
 2008-01-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm ($one_keyword_parser): More accurate error location
+	reporting.
+	('overflow-x', 'overflow-y'): Implemented.
+	('overflow'): Reimplemented as a shorthand.
+
+2008-01-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm ('opacity' parse): Support for '+'.
 
 2008-01-27  Wakaba  <wakaba@suika.fam.cx>
